--- a/theme/_variables.scss
+++ b/theme/_variables.scss
@@ -7,8 +7,7 @@ $grey: #ddd;
 $black: #666;
 
 // Fonts
-$serif: 'Playfair Display', serif;
-$sans: 'Varela Round', sans-serif;
+$graphik: 'graphik', sans-serif;
 
 // Beziers
 $quint: cubic-bezier(0.7, 0, 0.3, 1);
