--- a/theme/style.scss
+++ b/theme/style.scss
@@ -9,11 +9,16 @@ $breakpoints: (
 	desktop: 1440px,
 );
 
+// Fonts
+@include fontFace(graphik, 400);
+@include fontFace(graphik, 600);
+@include fontFace(graphik, 700);
+
 // Body
 body {
 	color: $black;
 	font-size: 16px;
-	font-family: $serif;
+	font-family: $graphik;
 	@include tap($grey);
 	@include scrollbar(6px, $grey, darken($grey, 15), #f6f7f8);
 }
