--- a/components/Helmet/Video/style.scss
+++ b/components/Helmet/Video/style.scss
@@ -65,6 +65,18 @@
 		opacity: 0;
 		pointer-events: none;
 	}
+
+	@value blackHelmetWidth: 18vw;
+	img {
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		width: blackHelmetWidth;
+		margin: auto;
+	}
 }
 
 .videoWrapper {
